# ChangeLog for net-ftp/lftp
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-ftp/lftp/ChangeLog,v 1.449 2014/01/19 10:32:43 ago Exp $

  19 Jan 2014; Agostino Sarubbo <ago@gentoo.org> lftp-4.4.14.ebuild:
  Stable for ppc64, wrt bug #497632

  18 Jan 2014; Agostino Sarubbo <ago@gentoo.org> lftp-4.4.14.ebuild:
  Stable for alpha, wrt bug #497632

*lftp-4.4.99_pre20140116 (16 Jan 2014)

  16 Jan 2014; Jeroen Roovers <jer@gentoo.org> +lftp-4.4.99_pre20140116.ebuild,
  -lftp-4.5.0_pre20131214.ebuild:
  Version bump.

  15 Jan 2014; Agostino Sarubbo <ago@gentoo.org> lftp-4.4.14.ebuild:
  Stable for ia64, wrt bug #497632

  14 Jan 2014; Agostino Sarubbo <ago@gentoo.org> lftp-4.4.14.ebuild:
  Stable for ppc, wrt bug #497632

  12 Jan 2014; Markus Meier <maekke@gentoo.org> lftp-4.4.14.ebuild:
  arm stable, bug #497632

  11 Jan 2014; Lars Wendler <polynomial-c@gentoo.org> lftp-4.4.14.ebuild:
  x86 stable (bug #497632).

  11 Jan 2014; Lars Wendler <polynomial-c@gentoo.org> lftp-4.4.14.ebuild:
  amd64 stable (bug #497632).

  10 Jan 2014; Jeroen Roovers <jer@gentoo.org> lftp-4.4.14.ebuild:
  Stable for HPPA (bug #497632).

  19 Dec 2013; Jeroen Roovers <jer@gentoo.org> -lftp-4.5.0_pre20131206.ebuild:
  Old.

*lftp-4.4.14 (13 Dec 2013)

  13 Dec 2013; Jeroen Roovers <jer@gentoo.org> -lftp-4.4.9-r1.ebuild,
  -lftp-4.4.11.ebuild, -lftp-4.4.13.ebuild, +lftp-4.4.14.ebuild:
  Version bump.

*lftp-4.5.0_pre20131214 (13 Dec 2013)

  13 Dec 2013; Jeroen Roovers <jer@gentoo.org> +lftp-4.5.0_pre20131214.ebuild:
  Version bump.

*lftp-4.5.0_pre20131206 (06 Dec 2013)

  06 Dec 2013; Jeroen Roovers <jer@gentoo.org> +lftp-4.5.0_pre20131206.ebuild:
  Version bump.

*lftp-4.4.13 (26 Nov 2013)

  26 Nov 2013; Jeroen Roovers <jer@gentoo.org> +lftp-4.4.13.ebuild:
  Version bump.

*lftp-4.4.11 (12 Nov 2013)

  12 Nov 2013; Jeroen Roovers <jer@gentoo.org> -lftp-4.4.10.ebuild,
  +lftp-4.4.11.ebuild:
  Version bump.
