@@ -5,29 +5,21 @@ AUX lftp-4.0.2.91-lafile.patch 976 SHA256 b54aac35c297657290a2d9571c38bdc4bf5154
 AUX lftp-4.3.5-autopoint.patch 330 SHA256 5aa4d9b739ffcc9a500988a7c80ca6a192d4ef440bea27278d87a27da50bf909 SHA512 7d7f0628bfe817fb9fb10d36f85f729f2e0b8ae3a6b6c9e719469a109b08b65a465c6d313cbe8a8115e9bc036e07347b6f5df0aa3067f905690b221d4bdf3318 WHIRLPOOL 91a8be4feed34ffd3f9d6ea2eb44968420d8cb57c494520b0ce8fb3f40cce85d136e8b2124eac7fcadbb8c9e1187b9fa6c9256f360079ac41eeb693cc5298c3a
 AUX lftp-4.3.8-gets.patch 430 SHA256 20f3f931132aae70c6dc8b03368419951bb4ec9f0d4cfcaf5966db3c6689da35 SHA512 24e61ec6784fdf95b5df75ed29680465e9fac87f9b79eaf4a9156a32c66afd4db5b905c7e29789a8a0e0d7c6b4c782b1f749e52d4c9547c96c1b79834c2a750a WHIRLPOOL 399f1a0714ada86a47a567d49a1d093b4900847fb38994e9adbc95c82d879e061d057945d66a0f26a6015c3737f586e6b83da8d1d5b30f7f103fc4d2e2ee523e
 DIST lftp-4.4.14.tar.xz 1459988 SHA256 61ceaefbd476061e728e2b1294c27866402237d1d6539ed9ca98769dba3c9189 SHA512 4915392317115ab497b3eb722ef96a17ad3edb114cd639ec39b9eb586d2e5cc0a4c5fa769704095347df774c600e2f8a30a062f27903185c1c2e69e403357928 WHIRLPOOL 65aeca83a5570c0c53de4045d20d7bb8767b0e96fc10525de3b6552ae40ac8845b0cb1cb770f2bebed0dc973aac436a66d3372a722e969757d98ee9097b36f9a
+DIST lftp-4.4.15.tar.xz 1460568 SHA256 75f40b7ab438a7b295410eb3e1ec8460e36ad2d48785383a6fc9201905db6868 SHA512 1d828a7b2ff808a0ee78f51c265d58df677e67cec9b4744cbd3a34816aba324199202094fa4144665e8d64385df7e76a54c6dc415e9ff33e97adab2eb0edaf4e WHIRLPOOL 3bf4d220b5581d87fb34d72f6129c2d660f80e3142560543c238dfaafd8cde5834f57884247c75e583ab6a9d4c12766b28c90e2b49889e44759d663591bbc7e0
 DIST lftp-4.4.8.tar.xz 1434312 SHA256 acdb4641874c950d80c699de8814fd7f24d54557511f6fb63d88f87227fbb34d SHA512 c9bed7be0cc8b9d65eaf1f2996380f36c87739d1679216af8cced36f516019776280a2d0bbf2ed26b0ed428d08549d41772e5028753834f26d48b7919d8fe9e0 WHIRLPOOL 170aa5ca4c63710660ef936c032681b5680d200cc374858cdf14d29c51a43b8e617649563875bc326279edd6e75e1e4b0da09d3d4d3852c848a6d3b3aa2b192c
 DIST lftp-4.4.9.tar.xz 1444684 SHA256 96ad4da1c0cec9899a9aa7ba61b7dd09994e1fdb3577eb75df15742e53797107 SHA512 de3facb2496130a3df1cc0d66f5cdd377ce4ec376e9ffa3656e2e8b113bb72058fe8f8671b99188adca46a9194661bcff40999d9bfbd2a4db3c13e11ec775ff4 WHIRLPOOL d8e96366dba0a4cbea260b18476227b098e2327ac99af8301e0090b11cca93ea5ba868b1c60b5a87cd1ece04ac12cd906cd1d35ad6e94ff2752efd0dc219f286
 DIST lftp-4.4.99.20140116.tar.gz 2545583 SHA256 eaf1a468e5ef9af186b4cb7ec1d1f4b0f8a33dd041173a68cc352c4ae362e4ab SHA512 b417912c198ce6e90555dd3208e369750cae23d7c86e3a3b644abfd6cab76773d341f4a2620ef4df74cb376b2a05c496460f6c01e799186864e0a9c4820d54f3 WHIRLPOOL 1a0cd3944413490e5755d14968168595ee01ea683a15fcbdddf3a7ed680cf05aebacfd135750a29e929fd03c36177e3351af07cced7fbe68e9d08299f027e5f9
 EBUILD lftp-4.4.14.ebuild 2180 SHA256 9d7f4256815abb6ab5e7add56b4764a3661990b1464265ad2f9d6b2a10a608a4 SHA512 98725487062db6b39fde9c1be8691f13784d407fe30780898c5d895b707b28acffb562cf9727004dbb0be7702efd8500c7eff7af149e77f76f4c24c6812f226a WHIRLPOOL 4a4e9ae51363c1ec5988b9592e52eebd3945e9cb566223c00990dd2623ef82d4c00cb8b17caa87bc6f4af5bcc13c0ef3d537c5c73717319cfd4e7ed339ad46bb
+EBUILD lftp-4.4.15.ebuild 2188 SHA256 042e2040da852cc0994f58a2b689c82c9f3992314fee3eea7505795a376590ce SHA512 85de1618c21e222504ed96169d1635b8e472dd2f5392157cf9baebb25449a53dfc9391ea2dc3561f85789013dfeac1eb77d3cfde1f4438411a566cbf457306b2 WHIRLPOOL 2b09a4f0f419fadbdf5291fea979171e9de39e4754a19db36a12719a92720836a300e45f670ad50665a79b555574a37e80646123aeab638e39065725cb4acc5b
 EBUILD lftp-4.4.8.ebuild 1889 SHA256 4fb8de0226fda1d25d891819f5704754a98ba8acab5e6ea6d9cbfbd6ceeeefd5 SHA512 59460286e4b8b8d51d5efb80c6bafd0748351812198e24453afeaba84a5d2403a57dec6cced6b3c87e12c350e30e74bcc3bba7f9206b0741a1aad5bf82f5ca86 WHIRLPOOL 671dcb179aa0f18227ca0dc5e6b90d27c75c636a4ab1ee2ff7b035acefcddec3c3a5f46c46c2cf02d07123c75990009e31f3f083111df5a3757d38f6b181fbea
 EBUILD lftp-4.4.9.ebuild 1873 SHA256 dec5cd189ccbaa1c2702203629db71bdd15515ff5b1b96452505a052eec9b596 SHA512 7e4a6ed703ec921bbc2ff65886059d282f94a13cbffb07c59eab4680c3528cb19cd643e783d9c933f914f3ff2639ffd53556260fdb8d4ff449550ccad1f1b8fc WHIRLPOOL b19fa7e3cf5def1813063182f87b1078f99e8390b8dc7fdf69298cb900f45ed2c92653d34f21d3c9b8f0881e7e3bb37208532752e9c5b0ff9ed972d7da51ff7f
 EBUILD lftp-4.4.99_pre20140116.ebuild 2081 SHA256 273c426071187da865591da2b5c7c2903b9e456003ce09d3e08dda555038987a SHA512 1e56e0501eadf068cf64e743a2d271094077d9d0f955f8bd9668751c12798c411a52e57987b070beb90ef2a3414eba0495fe7af23f294ae06e3de60d360fecc5 WHIRLPOOL f94133b46c9970fbd89fd12e109282467f1a23e5fb97bedea15ef9cb57a65beb90b4e84b2bd745cc8f38e782fce42180daae5f7592fefebde123c01eb3439a0a
-MISC ChangeLog 56341 SHA256 dc3e1f57ba2956a22555f133e8f0a1a814d8c43157e07defd7231c9b08996b3c SHA512 feb0a4671080ca82b59102998dac0676bdfa87044c171764f5f36f8f16509dae017a17e105556440897764cd2a435972fb393b2d5f63d8a26c7e13ac03161202 WHIRLPOOL 3d5c91ba227416dbe4f9a5751d5261eb18b9116a35b0dba1fc7860948ab1221ad9b40c9f9156a9fc5b4f3abc3ca69192e4db9f04246ee778e27c3d4d5220d5c1
+MISC ChangeLog 56454 SHA256 d9a78dcce72b05fbe5cb2232c530c686571b31bf20ad5f777cd7c05f3dfa007a SHA512 c7ad26227e30b9fc6981b52d7cd31e5e8a3727ac8ab581f6c48791e6dd780cafe7d04b96ec453bd21c81e1e152b6a3976e40523c5cb1313249c8d4a26dcd73e7 WHIRLPOOL ad821327636f1431766f2b792eaeac864aceb2fe5218d3c105ce23717184c621b1bfab855d8237a7004f691edea42490f5f5ce1dcaeaa832a6bb9575ebd07874
 MISC metadata.xml 531 SHA256 ce1a5e5ed227a35582fbc8cae768a0f6b7769ac49194197926882f47600b519f SHA512 6058e3d0fbf8032fc97c48d9742afea487ac89bbe88281e4a4fd392018a42c7ff5bab39b7f01b16c70bd24735cf3b6b9ea613f957f71075f095cf3b109516cd5 WHIRLPOOL cc07076f948d4cbd81a4bd799c8e5f4a06f5665a732034456778d51c7bdd8486c04cd55bfdbdf85f013379f231b535508e46572b191a7bd30d04f6692b0647c6
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJS26nMAAoJELp701BxlEWfIMYQAJEY8Um9ozPFCUjLdCshYoFS
-R9QBA/MhyTFhAkSfvx/s6761nTl0OMNOimM8y4y7KzV0mDamjkOK+12GpEAICjDf
-g/Q4/XKo0ZEXOnwxjQXBOA9qNicrhi/7Hwo8YGIBfED+EhIFtatca3ASSEkDn8J1
-i26xqAzboTWbMCHSDrj3ee64G8U8ACXp4H01lX41x53IwWUz4bbyDBfwGCed7Ndw
-XsHGstKcR5yiSDpE7OE2ZDU2fZG29vnM52HCKHW08Xad8/S6EjfI5cV2V7pptv95
-Jbef9suVxs5oQlC1mHbo6Dz7pEShLf6VFib4uJVC4lKKAiKWXK+N+klRynvGUp6+
-xzuHTUoJKtcAJhf9cLj4xS9JW+vCM7qh8vE57TjVrV7w54FVjnwKKAfg9z4q4Hth
-NL38e5kGHts1aFHPBYoAdbKTjc+5JiiSsSh+LQXMQq2i1y9PBGXS9MNAaSh3rZ/y
-X8iFovtyFj24VyhFDF60M083oeDwinBzZj9quA3ojxeboREemqtZ1al36FOlW8u4
-ZLnB+K/yvC01AQntBr1cjFAUfHgmGnqsqTsAJSAtXs1K62g8XFFnbkLkfsGBEHXD
-lV6wuJVKmkUxiKgv7x55oECyS0zBNtXCnu5ugcs6Ot0iostMdUdybZ8MXRQzUgGd
-8YW6u1PB2yMM+KSUO58W
-=a77v
+iEYEAREIAAYFAlLimxYACgkQVWmRsqeSphMsmgCfQ1qGz4VQk+0TlmOcOan9SXRG
+6XIAnRUfdqiPT82D8boSvfiYrO0pK2gN
+=XzbK
 -----END PGP SIGNATURE-----
